--- a/PosApp/app/src/main/res/layout/fragment_orders.xml
+++ b/PosApp/app/src/main/res/layout/fragment_orders.xml
@@ -17,7 +17,7 @@
         android:scaleType="centerCrop"
         android:src="@drawable/main_food"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.226"
+        app:layout_constraintHorizontal_bias="0.41"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -127,13 +127,25 @@
         android:id="@+id/btnLogOut"
         android:layout_width="170dp"
         android:layout_height="60dp"
-        android:layout_marginEnd="216dp"
+        android:layout_marginEnd="236dp"
         android:text="ログアウト"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="@+id/textView18"
         app:layout_constraintEnd_toStartOf="@+id/textView18"
         app:layout_constraintTop_toTopOf="@+id/textView18"
         app:layout_constraintVertical_bias="0.513" />
+
+    <Button
+        android:id="@+id/btnPay"
+        android:layout_width="170dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="32dp"
+        android:text="会計"
+        android:textSize="25dp"
+        app:layout_constraintBottom_toBottomOf="@+id/btnLogOut"
+        app:layout_constraintStart_toEndOf="@+id/btnLogOut"
+        app:layout_constraintTop_toTopOf="@+id/btnLogOut"
+        app:layout_constraintVertical_bias="0.0" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/OrderRecyclerview"
@@ -148,7 +160,34 @@
         app:layout_constraintTop_toBottomOf="@+id/textView18"
         app:layout_constraintVertical_bias="0.0" />
 
-<!--    <Button-->
+    <EditText
+        android:id="@+id/edtTableNumBer"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="212dp"
+        android:layout_marginBottom="56dp"
+        android:gravity="center"
+        android:maxLength="2"
+        android:ems="10"
+        android:background="#E4E1D7"
+        android:inputType="number"
+        android:textSize="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView42"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#F3F1EB"
+        android:text="テーブル番号:"
+        android:textColor="@color/black"
+        android:textSize="30dp"
+        app:layout_constraintBottom_toBottomOf="@+id/edtTableNumBer"
+        app:layout_constraintEnd_toStartOf="@+id/edtTableNumBer"
+        app:layout_constraintTop_toTopOf="@+id/edtTableNumBer" />
+
+    <!--    <Button-->
 <!--        android:id="@+id/btnAdd"-->
 <!--        android:layout_width="113dp"-->
 <!--        android:layout_height="75dp"-->
